@@ -1,6 +1,6 @@
 <!DOCTYPE suite SYSTEM "http://beust.com/testng/testng-1.0.dtd" >
   
-<suite name="Single" parallel="tests" verbose="2" >
+<suite name="Single" parallel="tests" verbose="10" >
 
 <!--
 <suite-files>
@@ -12,16 +12,8 @@
   <parameter name="factory-param" value="FactoryParam" />
   <test name="Factory">
     <classes>
-      <class name="test.factory.FactoryTest" />
-      <class name="test.factory.VerifyFactoryTest" />
-      <class name="test.factory.FactoryInSeparateClass" />
-      <class name="test.factory.Factory2Test" />
-	  
-      <class name="test.factory.FactoryWithInstanceInfoTest" />
-      <class name="test.factory.VerifyFactoryWithInstanceInfoTest" />
-      <class name="test.factory.TestClassAnnotationTest" />
-      
-      <class name="test.factory.FactoryWithDataProviderTest" />
+      <class name="test.cyclic.SomeConcreteTests" />
+      <class name="test.cyclic.HibernateConcreteTests" />
     </classes>
   </test>
  
